changed names, history html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Ziele Übersicht</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
-    <script src=""></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}" defer></script>
+
 </head>
 <body>
     <div class="btn-container">
