--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -20,16 +20,40 @@ table{
     text-align: start;
 }
 th{
+    /* display: flex; */
+    /* flex-direction: column; */
     text-align: start;
     font-weight: bold;
+    align-items: center;
 }
 td{
     font-weight: 300;
     border-spacing: 0;
+    padding: 6px;
+}
+.theader {
+    background-color: transparent !important;
+    
+}
+/* tr{
+    width: 100%;
+} */
+.theaderhead p{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+.sort-symbol{
+
 }
 .first-td-child{
     background-color: white;
 }
 .second-td-child{
     background-color: transparent;
+}
+.sort-symbol{
+    cursor: pointer;
 }
