--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,6 +1,5 @@
 body{
     background-color: rgb(199, 198, 198);
-    
 }
 .btn-container{
     position: absolute;
@@ -20,8 +19,6 @@ table{
     text-align: start;
 }
 th{
-    /* display: flex; */
-    /* flex-direction: column; */
     text-align: start;
     font-weight: bold;
     align-items: center;
@@ -32,21 +29,14 @@ td{
     padding: 6px;
 }
 .theader {
-    background-color: transparent !important;
-    
+    background-color: transparent !important;   
 }
-/* tr{
-    width: 100%;
-} */
 .theaderhead p{
     display: flex;
     flex-direction: row;
     align-items: start;
     margin-block-start: 0;
     margin-block-end: 0;
-}
-.sort-symbol{
-
 }
 .first-td-child{
     background-color: white;
@@ -56,4 +46,12 @@ td{
 }
 .sort-symbol{
     cursor: pointer;
+}
+.btns{
+    cursor: pointer;
+    background-color: transparent;
+    border: unset;
+}
+.save-btn{
+    display: none;
 }
