--- a/app/static/css/liste.css
+++ b/app/static/css/liste.css
@@ -2,12 +2,15 @@ body{
     margin: 20px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
     background-color: rgb(199, 198, 198);
     gap: 40px;
 }
+#table-view{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 .top-btns{
-    /* padding: 0 10px; */
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -23,8 +26,27 @@ body{
     background-color: blue;
     color: white;
     padding: 8px 10px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
+.add-btn{
+    height: 60px;
+}
+.search-container{
+    width: 100%;
+    display: flex;
+    gap: 20px;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.abteilung-select{
+    width: 50%;
+    padding: 5px;
+}
+.textsearch{
+    width: 50%;
+    padding: 5px;
+}
+
 table{
     width: 100%;
     border-spacing: 0;
@@ -70,4 +92,9 @@ tr{
 }
 .table-img, .save-btn{
     cursor: pointer;
+}
+.btns{
+    background-color: transparent;
+    cursor: pointer;
+    border: unset;
 }
